--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,182 @@
+@import "./utils/variables";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #EDEDED;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+}
+
+.game-field {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat($grid-size, $cell-size);
+  grid-template-rows: repeat($grid-size, $cell-size);
+  gap: $cell-gap;
+  padding: $cell-gap;
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+.field-cell {
+  background-color: #aaa;
+  width: 75px;
+  height: 75px;
+  border-radius: 5px;
+  color: #776e65;
+  box-sizing: border-box;
+  text-align: center;
+  vertical-align: center;
+  user-select: none;
+}
+
+.tile {
+  --x: 0;
+  --y: 0;
+
+  position: absolute;
+  top: calc(var(--y) * (#{$cell-size} + #{$cell-gap}) + #{$cell-gap});
+  left: calc(var(--x) * (#{$cell-size} + #{$cell-gap}) + #{$cell-gap});
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: $cell-size;
+  height: $cell-size;
+  border-radius: 5px;
+  background-color: hsl(190deg, 50%, var(--bg-color));
+  color: hsl(190deg, 25%, var(--text-color));
+  transition: 100ms;
+  animation: show 200ms;
+}
+
+@keyframes show {
+  0% {
+    opacity: 0.5;
+    transform: scale(0);
+  }
+}
+
+.game-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 24px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+h1 {
+  background: #FFC107;
+  color: #f9f6f2;
+  width: 75px;
+  height: 75px;
+  font-size: 24px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #EEE4DA;
+  border: 1px solid #CCC;
+  width: 75px;
+  height: 75px;
+  border-radius: 5px;
+  color: #776e65;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin: 0 8px 0 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.controls {
+  display: flex;
+}
+
+.button {
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #f9f6f2;
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  width: 75px;
+  height: 75px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+
+  transition: 0.25s ease background;
+}
+
+.start {
+  background: #4CAF50;
+  font-size: 20px;
+
+  &:hover {
+    background: #179921;
+  }
+}
+
+.restart {
+  background: #E57373;
+
+  &:hover {
+    background: #D32F2F;
+  }
+}
+
+.message {
+  margin-top: 20px;
+  box-sizing: border-box;
+  width: 100%;
+  background: #d6cdc4;
+  color: #776e65;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+}
+
+.message-win {
+  background: #edc22e;
+  color: #f9f6f2;
+}
+
+.message-container {
+  width: 100%;
+  height: 150px;
+}
+
+.best {
+ background-color: #F5D78E;
+ color: #776E65;
 }
